--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,6 +1,19 @@
+- title: Últimos días en Berlín
+  author: Paloma Sánchez-Garnica
+  link: https://amzn.to/4dXbYDp
+  image:
+  description:
+  genre: [novela]
+  completed: 
+  onpage: 238
+  pages: 638
+  synopsis: "Cuando Yuri Santacruz asistió al nombramiento como canciller de Adolf Hitler, no podía imaginar lo mucho que cambiaría su vida en Berlín. Había llegado allí unos meses atrás, después de haber huido, junto con parte de su familia, de San Petersburgo, asfixiados por una revolución que los había dejado sin nada. A Yuri también lo privó de su madre y su hermano pequeño, a quienes las autoridades rusas no permitieron la salida del país. Ya en Berlín, su sentido de la justicia lo impulsará a defender a un joven comunista agredido por las tropas de asalto de Hitler. Ese día, además, conocerá a su gran amor, Claudia. Su vida dará un giro inesperado, y la que hasta entonces había sido su máxima prioridad, buscar a su madre y a su hermano, será sustituida por otra más urgente en esos tiempos convulsos: seguir con vida."
+  cover: "ultimosdiasberlin.jpg"
+  highlight: 'yes'
+
 - title: El juego de la vida
   author: Adriana Hernández Planillas
-  link: https://amzn.to/42nos32
+  link: https://amzn.to/3Yzj0tB
   image:
   description:
   genre: [ajedrez]
